# application/controllers/teams_controller.go
@@ -14,6 +14,7 @@ type ITeamsController interface {
 	CreateTeam(g *gin.Context) api.WebResponse[*dto.CreateTeamResponse]
 	GetListTeam(g *gin.Context) api.WebResponse[[]dto.GetListTeamItem]
 	SoftDeleteTeam(g *gin.Context) api.WebResponse[any]
+	CreateTeamPlayer(g *gin.Context) api.WebResponse[*dto.CreatePlayerTeamResponse]
 }
 
 type teamsController struct {
@@ -109,4 +110,52 @@ func (c *teamsController) SoftDeleteTeam(g *gin.Context) api.WebResponse[any] {
 	l.WithContext(ctx).Debug("[GetListTeam].ctrl: Started").Msg()
 	teamId := g.Param("teamId")
 	return c.teamsService.SoftDeleteTeam(ctx, teamId)
+}
+
+// CreateTeamPlayer
+//
+//	@Summary		Create Team Player
+//	@Description	Create a new team Player
+//	@Tags			Teams
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			teamId	path		string						true	"Team ID"
+//
+//	@Param			request	body		dto.CreatePlayerTeamRequest	true	"Create team bory request"
+//	@Success		201		{object}	api.WebResponse[dto.CreatePlayerTeamResponse]
+//	@Failure		400		{object}	api.WebResponse[any]
+//	@Failure		500		{object}	api.WebResponse[any]
+//	@Router			/api/v1/teams/{teamId}/players [post]
+func (c *teamsController) CreateTeamPlayer(g *gin.Context) api.WebResponse[*dto.CreatePlayerTeamResponse] {
+	l := logger.LoggerNew()
+	ctx := g.Request.Context()
+
+	l.WithContext(ctx).Debug("[CreateTeamPlayer].ctrl: Started").Msg()
+
+	var request dto.CreatePlayerTeamRequest
+	if err := g.ShouldBindBodyWithJSON(&request); err != nil {
+		l.WithContext(ctx).Error("error when read request").Attr("error", err).Msg()
+		return api.ErrorResponse[*dto.CreatePlayerTeamResponse](
+			ctx,
+			constants.BadRequestDefault.GetMessage(),
+			constants.BadRequestDefault.GetCode(),
+			constants.BadRequestDefault.GetHttpCode(),
+			nil,
+		)
+	}
+
+	if valErr := helper.ValidateParams(ctx, &request); valErr != nil {
+		l.WithContext(ctx).Error("error when read request").Attr("error", valErr).Msg()
+		return api.ErrorResponse[*dto.CreatePlayerTeamResponse](
+			ctx,
+			constants.BadRequestDefault.GetMessage(),
+			constants.BadRequestDefault.GetCode(),
+			constants.BadRequestDefault.GetHttpCode(),
+			valErr,
+		)
+	}
+
+	teamId := g.Param("teamId")
+	return c.teamsService.CreatePlayerTeam(ctx, teamId, &request)
 }
